# rust-propagation-otel

./: .gitignore  README.md  build.sh
node-client/: index.js  package.json  tracing.js
pure-opentelemetry/: Cargo.toml  dice_server.rs
rust-client/: Cargo.toml  dice_client.rs
rust-server/: Cargo.toml  dice_server.rs
tracing-crate/: Cargo.toml  dice_server.rs
tracing-with-opentelemetry/: dice_server.rs
