[package]
name = "dice_server"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "dice_server"
path = "dice_server.rs"
doc = false

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.29", features = ["full"] }
rand = { version = "0.8" }

opentelemetry = { version = "0.21.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.14.0", features = ["http-proto", "reqwest-client", "reqwest-rustls"] }
opentelemetry_sdk = { version = "0.21.2", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = { version = "0.13.0" }

tracing = {version = "0.1" }
tracing-opentelemetry = "0.22"
tracing-subscriber = "0.3"